Fixed text overflow on widgets

--- a/sass/theme/my-costumizations/_widget.scss
+++ b/sass/theme/my-costumizations/_widget.scss
@@ -9,6 +9,11 @@
             clear: right;
             padding: 3px 0;
 
+            a{
+                /* These are technically the same, but use both */
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+            }
             &::before{
                 display: block;
                 float: right;
